# bench-local

./: .env  README.md  docker-compose.yml
db/: init.sql
grafana/dashboards/: Rust Service - Live Benchmark.json
grafana/olddashboard/: rust-bench.json
grafana/provisioning/dashboards/: dashboards.yml
k6/: loadtest.js
prometheus/: prometheus.yml
rust-service/: .dockerignore  Cargo.toml  Dockerfile
rust-service/src/: app.rs  app_tests.rs  error.rs  handlers.rs  main.rs  metrics.rs  state.rs
